[package]
name = "group_05_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ntest = "0.7"
text_io = "0.1.10"
socket2 = {version = "0.3.4", features = ["reuseport"]}
bincode = "1.2.1"
lazy_static = "1.0"
serde = { version = "1.0.137", features = ["derive"] }